--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "langchain>=1.0.8",
     "langchain-google-genai>=3.1.0",
+    "python-dotenv>=1.2.1",
     "streamlit>=1.51.0",
 ]
